service.yaml
apiVersion: v1
kind: Service
metadata:
  name: outline
  namespace: outline
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: outline
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-db-svc
  namespace: outline
spec: 
  type: ExternalName
  externalName: 10.0.2.2
